<resources>
    <string name="app_name">AeroDent</string>
    <string name="home_total_patients">Общо пациенти</string>
    <string name="home_todays_appointments">Прегледи за днес</string>
    <string name="home_active_treatments">Активни лечения</string>
    <string name="home_appointments_left">Оставащи посещения</string>
    <string name="home_todays_schedule">ГРАФИК ЗА ДНЕС</string>
    <string name="home_quick_actions">БЪРЗО МЕНЮ</string>
    <string name="home_new_patient">Нов пациент</string>
    <string name="home_new_appointment">Нов час</string>
    <string name="home_take_photo">Снимка</string>
    <string name="home_title">Начало</string>
    <string name="settings_title">Настройки</string>
    <string name="settings_user_data">Данни за потребителя</string>
    <string name="settings_payments">Плащания</string>
    <string name="settings_reports">Експорт</string>
    <string name="settings_logout">Изход</string>
    <string name="patients_title">Пациенти</string>
    <string name="patients_search_hint">Търсене по име, ЕГН или тел.</string>
    <string name="patient_phone_format">тел: %1$s</string>
    <string name="status_scheduled">ЗАПИСАН</string>
    <string name="status_completed">ЗАВЪРШЕН</string>
    <string name="status_cancelled">ОТМЕНЕН</string>
    <string name="status_paid">ПЛАТЕНО</string>
    <string name="status_pending">НЕПЛАТЕНО</string>
    <string name="status_partial">ЧАСТИЧНО</string>
    <string name="add_patient_title">Нов пациент</string>
    <string name="add_patient_section_personal">ЛИЧНА ИНФОРМАЦИЯ</string>
    <string name="add_patient_first_name">Име</string>
    <string name="add_patient_middle_name">Презиме</string>
    <string name="add_patient_last_name">Фамилия</string>
    <string name="add_patient_egn">ЕГН *</string>
    <string name="add_patient_dob">Дата на раждане</string>
    <string name="add_patient_gender">Пол</string>
    <string name="gender_male">Мъж</string>
    <string name="gender_female">Жена</string>
    <string name="gender_unknown">Неизвестен</string>
    <string name="add_patient_section_contact">КОНТАКТИ</string>
    <string name="add_patient_phone">Телефон</string>
    <string name="add_patient_email">Имейл</string>
    <string name="add_patient_section_insurance">ЗДРАВНО ОСИГУРЯВАНЕ</string>
    <string name="add_patient_zok_number">Номер на ЗОК</string>
    <string name="nzok_short">ЗОК</string>
    <string name="add_patient_notes">Бележки</string>
    <string name="add_patient_save">Запази пациента</string>
    <string name="add_appointment_title">Нов час</string>
    <string name="add_appointment_section_details">ДЕТАЙЛИ ЗА ЧАСА</string>
    <string name="add_appointment_patient">Пациент *</string>
    <string name="add_appointment_date">Дата *</string>
    <string name="add_appointment_time">Час *</string>
    <string name="add_appointment_treatment">Вид лечение</string>
    <string name="add_appointment_notes">Бележки</string>
    <string name="add_appointment_save">Запиши час</string>
    <string name="patient_details_title">Детайли за пациента</string>
    <string name="patient_details_contact_info">ИНФОРМАЦИЯ ЗА КОНТАКТ</string>
    <string name="patient_details_tabs">РАЗДЕЛИ</string>
    <string name="patient_details_tab_history">История</string>
    <string name="patient_details_tab_dental_chart">Зъбен статус</string>
    <string name="patient_details_tab_photos">Снимки</string>
    <string name="patient_details_tab_payments">Плащания</string>
    <string name="patient_details_egn">ЕГН: %1$s</string>
    <string name="patient_details_gender">Пол: %1$s</string>
    <string name="patient_details_zok">Номер на ЗОК: %1$s</string>
    <string name="patient_details_phone_label">Телефон</string>
    <string name="patient_details_email_label">Имейл</string>
    <string name="patient_details_dob">Дата на раждане: %1$s</string>
    <string name="payment_status_due">Дължимо %1$.2f EUR</string>
    <string name="unknown">Неизвестно</string>
    <string name="unknown_patient">Неизвестен пациент</string>
    <string name="no_phone">Няма телефонен номер</string>
    <string name="checkup">Профилактичен преглед</string>
    <string name="not_available_short">---</string>
    <string name="calendar_title">Календар</string>
    <string name="calendar_appointments_count">%1$d ЗАПИСАНИ ЧАСА</string>
    <string name="calendar_status_arrived">Пристигнал</string>
    <string name="calendar_status_upcoming">Предстоящ</string>
    <string name="patient_edit_title">Редактирай пациент</string>
    <string name="patient_update_button">Обнови данните</string>
    <string name="patient_error_egn_required">ЕГН е задължително поле</string>
    <string name="patient_error_egn_invalid">Невалидно ЕГН</string>
    <string name="patient_error_duplicate_egn">Пациент с това ЕГН вече съществува</string>
    <string name="patient_error_phone_invalid">Невалиден телефонен номер</string>
    <string name="patient_error_email_invalid">Невалиден имейл адрес</string>
    <string name="patient_error_zok_invalid">Невалиден номер на ЗОК (точно 8 цифри)</string>
    <string name="patient_saved_success">Пациентът е записан</string>
    <string name="patient_updated_success">Данните са обновени</string>
    <string name="patient_deleted_success">Пациентът е изтрит</string>
    <string name="delete">Изтрий</string>
    <string name="delete_patient_title">Изтриване на пациент</string>
    <string name="delete_patient_confirmation">Желаете ли да изтриете този пациент?</string>
    <string name="cancel">Отказ</string>
    <string name="appointment_edit_title">Редактирай час</string>
    <string name="appointment_update_button">Обнови часа</string>
    <string name="appointment_error_no_patients">Няма намерени пациенти</string>
    <string name="appointment_error_datetime_required">Датата и часът са задължителни</string>
    <string name="appointment_scheduled_success">Часът е записан успешно</string>
    <string name="appointment_updated_success">Часът е обновен</string>
    <string name="hint_date_format">ДД.ММ.ГГГГ</string>
    <string name="hint_time_format">ЧЧ:ММ</string>
    <string name="hint_treatment_type">Преглед</string>
    <string name="hint_dob_example">01.01.2000</string>
    <string name="hint_phone_example">+359 087..</string>
    <string name="hint_email_example">user@abv.bg</string>
    <string name="appointment_detail_title">Детайли за посещението</string>
    <string name="procedures_dental_chart">Процедури</string>
    <string name="appointment_detail_section_info">ИНФОРМАЦИЯ ЗА ЧАСА</string>
    <string name="appointment_detail_patient">Пациент</string>
    <string name="appointment_detail_date">Дата</string>
    <string name="appointment_detail_time">Час</string>
    <string name="appointment_detail_treatment">Лечение</string>
    <string name="appointment_detail_status">Статус</string>
    <string name="appointment_detail_notes">Бележки</string>
    <string name="delete_appointment_title">Изтриване на час</string>
    <string name="delete_appointment_confirmation">Желаете ли да изтриете записания час?</string>
    <string name="appointment_deleted_success">Часът е изтрит</string>
    <string name="add_procedure_edit_chart">Зъбен Статус</string>
    <string name="photo_delete_confirmation">Желаете ли да изтриете тази снимка?</string>
    <string name="photo_deleted_success">Снимката е изтрита успешно</string>
    <string name="photo_taken_on">Направена на </string>
    <string name="select_appointment_for_photo">Изберете посещение за прикачване</string>
    <string name="camera_permission_required">Необходим е достъп до камерата</string>
    <string name="photo_saved_success">Снимката е запазена в галерията</string>
    <string name="photo_save_error">Грешка при запис на снимката</string>
    <string name="photo_uploaded_success">Снимката е качена успешно</string>
    <string name="dental_chart_title">Зъбен статус</string>
    <string name="active_conditions">Активни състояния</string>
    <string name="add_condition">Добави състояние</string>
    <string name="dental_chart_tooth_label">Зъб №%1$d</string>
    <string name="dental_chart_tooth_title">Зъб %1$d</string>
    <string name="dental_chart_surfaces_for">Повърхности за %1$s:</string>
    <string name="context_appointment">По време на посещение</string>
    <string name="context_previous">Предишна работа</string>
    <string name="surfaces_label">Повърхности: %1$s</string>
    <string name="entry_context">Контекст на записа</string>
    <string name="previous_work">Предишна работа</string>
    <string name="current_treatment">Текущо лечение</string>
    <string name="save">Запази</string>
    <string name="annul_record_title">Анулиране на запис</string>
    <string name="annul_record_message">Желаете ли да анулирате този запис?</string>
    <string name="annul_record">Анулирай</string>
    <string name="annulled_badge">АНУЛИРАН</string>
    <string name="role_admin">Администратор</string>
    <string name="role_dentist">Зъболекар</string>
    <string name="role_assistant">Асистент</string>
    <string name="specialty_general">Общопрактикуващ лекар по дентална медицина</string>
    <string name="specialty_pediatric">Детска дентална медицина</string>
    <string name="specialty_oral_surgery">Орална хирургия</string>
    <string name="specialty_maxillofacial">Дентална, орална и лицево-челюстна хирургия</string>
    <string name="surface_mesial">М</string>
    <string name="surface_occlusal">О</string>
    <string name="surface_distal">Д</string>
    <string name="surface_vestibular">В</string>
    <string name="surface_lingual">Л</string>
    <string name="surface_legend">М: Мезиална, О: Оклузална, Д: Дистална, В: Вестибуларна, Л: Лингвална</string>
    <string name="category_pathology">Патология</string>
    <string name="category_restoration">Възстановявания</string>
    <string name="category_periodontology">Пародонтология</string>
    <string name="category_prosthetics">Липсващи и Протезиране</string>
    <string name="category_general">Общи</string>
    <string name="condition_caries">Кариес</string>
    <string name="condition_pulpitis">Пулпит</string>
    <string name="condition_fracture">Фрактура</string>
    <string name="condition_obturation">Обтурация</string>
    <string name="condition_root_canal">Налична ендодонтска процедура</string>
    <string name="condition_radicular_post">Радикуларен щифт</string>
    <string name="condition_crown">Корона - самостоятелна</string>
    <string name="condition_crown_retainer">Корона - мостокрепител</string>
    <string name="condition_splint">Шина / Адхезивен мост</string>
    <string name="condition_calculus">Зъбен камък</string>
    <string name="condition_periodontitis">Периодонтит</string>
    <string name="condition_periodontitis_pa">Пародонтит / Периимплантит</string>
    <string name="condition_mobility_1">Подвижност (I-ва степен)</string>
    <string name="condition_mobility_2">Подвижност (II-ра степен)</string>
    <string name="condition_mobility_3">Подвижност (III-та степен)</string>
    <string name="condition_missing">Липсващ зъб</string>
    <string name="payment_error_overcharge">Сумата надвишава остатъка!</string>
    <string name="payment_title">Плащане</string>
    <string name="payment_total_amount_hint">Обща сума (EUR)</string>
    <string name="payment_amount_paid_hint">Сума (EUR)</string>
    <string name="payment_method_hint">Метод на плащане</string>
    <string name="payment_empty_state">Няма създадено плащане</string>
    <string name="payment_create_btn">Добави плащане</string>
    <string name="payment_details_title">Детайли за плащане</string>
    <string name="payment_balance_label">Оставащо задължение</string>
    <string name="payment_total_amount_label">Обща сума</string>
    <string name="payment_amount_paid_label">Платено</string>
    <string name="payment_description_hint">Описание / Процедури</string>
    <string name="payment_history_title">История на плащанията</string>
</resources>